Fix list-style-position.
  * Set list-style-poisiton to inside
  * replace list-style by list-style-image to have a more predictible behaviour

This should avoid the overlap of image section and lists in the content.

--- a/app/stylesheets/RonRonnement.scss
+++ b/app/stylesheets/RonRonnement.scss
@@ -788,6 +788,9 @@ footer.actions .action {
 			border-image:         url('/favicon.png') 0 0 0 32;
 		}
 	}
+	.content li {
+		list-style-position: inside;
+	}
 }
 
 blockquote {
@@ -1079,26 +1082,26 @@ code {
 }
 
 /* Langues */
-li.link[lang=cn] { list-style: url('/images/langs/cn.png'); }
-li.link[lang=ct] { list-style: url('/images/langs/ct.png'); }
-li.link[lang=da] { list-style: url('/images/langs/da.png'); }
-li.link[lang=de] { list-style: url('/images/langs/de.png'); }
-li.link[lang=el] { list-style: url('/images/langs/el.png'); }
-li.link[lang=en] { list-style: url('/images/langs/en.png'); }
-li.link[lang=es] { list-style: url('/images/langs/es.png'); }
-li.link[lang=eu] { list-style: url('/images/langs/eu.png'); }
-li.link[lang=fi] { list-style: url('/images/langs/fi.png'); }
-li.link[lang=fr] { list-style: url('/images/langs/fr.png'); }
-li.link[lang=it] { list-style: url('/images/langs/it.png'); }
-li.link[lang=ja] { list-style: url('/images/langs/ja.png'); }
-li.link[lang=ko] { list-style: url('/images/langs/ko.png'); }
-li.link[lang=nl] { list-style: url('/images/langs/nl.png'); }
-li.link[lang=no] { list-style: url('/images/langs/no.png'); }
-li.link[lang=pl] { list-style: url('/images/langs/pl.png'); }
-li.link[lang=pt] { list-style: url('/images/langs/pt.png'); }
-li.link[lang=ru] { list-style: url('/images/langs/ru.png'); }
-li.link[lang=sv] { list-style: url('/images/langs/sv.png'); }
-li.link[lang=xx] { list-style: url('/images/langs/xx.png'); }
+li.link[lang=cn] { list-style-image: url('/images/langs/cn.png'); }
+li.link[lang=ct] { list-style-image: url('/images/langs/ct.png'); }
+li.link[lang=da] { list-style-image: url('/images/langs/da.png'); }
+li.link[lang=de] { list-style-image: url('/images/langs/de.png'); }
+li.link[lang=el] { list-style-image: url('/images/langs/el.png'); }
+li.link[lang=en] { list-style-image: url('/images/langs/en.png'); }
+li.link[lang=es] { list-style-image: url('/images/langs/es.png'); }
+li.link[lang=eu] { list-style-image: url('/images/langs/eu.png'); }
+li.link[lang=fi] { list-style-image: url('/images/langs/fi.png'); }
+li.link[lang=fr] { list-style-image: url('/images/langs/fr.png'); }
+li.link[lang=it] { list-style-image: url('/images/langs/it.png'); }
+li.link[lang=ja] { list-style-image: url('/images/langs/ja.png'); }
+li.link[lang=ko] { list-style-image: url('/images/langs/ko.png'); }
+li.link[lang=nl] { list-style-image: url('/images/langs/nl.png'); }
+li.link[lang=no] { list-style-image: url('/images/langs/no.png'); }
+li.link[lang=pl] { list-style-image: url('/images/langs/pl.png'); }
+li.link[lang=pt] { list-style-image: url('/images/langs/pt.png'); }
+li.link[lang=ru] { list-style-image: url('/images/langs/ru.png'); }
+li.link[lang=sv] { list-style-image: url('/images/langs/sv.png'); }
+li.link[lang=xx] { list-style-image: url('/images/langs/xx.png'); }
 
 /* Tribune */
 body#boards-show {
